<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity"
    android:background="@color/reef_encounter">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/exit"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_margin="10dp"
            android:contentDescription="@string/home"
            android:scaleX="-1"
            android:src="@drawable/ic_baseline_exit_to_app_24"
            android:tint="@color/kuning_pucat" />

    </RelativeLayout>

    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_world"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/classBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="231dp"
        android:layout_height="76dp"
        android:background="@color/kuning_pucat"
        android:text="@string/classTxt"
        android:textColor="@color/imperial_primer"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hi"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/scoreBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="231dp"
        android:layout_height="76dp"
        android:background="@color/kuning_pucat"
        android:text="@string/scoreTxt"
        android:textColor="@color/imperial_primer"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classBtn"
        app:layout_constraintVertical_bias="0.142" />

</androidx.constraintlayout.widget.ConstraintLayout>