<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LecturerScoreActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/class_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/reef_encounter"
        android:paddingStart="10sp"
        android:paddingTop="10sp"
        android:paddingEnd="25sp"
        android:paddingBottom="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/lecturer_score_home"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:contentDescription="@string/home"
            android:src="@drawable/ic_baseline_home_24"
            android:tint="@color/kuning_pucat" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nisnInputLayout"
        android:layout_width="302dp"
        android:layout_height="68dp"
        android:background="@color/white"
        android:hint="@string/nisn"
        android:textColorHint="@color/hint"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nisn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/scoreInputLayout"
        android:layout_width="302dp"
        android:layout_height="68dp"
        android:background="@color/white"
        android:hint="@string/subject_id"
        android:textColorHint="@color/hint"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nisnInputLayout"
        app:layout_constraintVertical_bias="0.049">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subjectIdInputLayout"
        android:layout_width="302dp"
        android:layout_height="68dp"
        android:background="@color/white"
        android:hint="@string/score"
        android:textColorHint="@color/hint"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreInputLayout"
        app:layout_constraintVertical_bias="0.062">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="268dp"
        android:layout_height="53dp"
        android:background="@color/reef_encounter"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectIdInputLayout"
        app:layout_constraintVertical_bias="0.103" />

</androidx.constraintlayout.widget.ConstraintLayout>