<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentProfileActivity">

    <RelativeLayout
        android:id="@+id/class_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/livid"
        android:foregroundTint="@color/white"
        android:paddingStart="10sp"
        android:paddingTop="10sp"
        android:paddingEnd="25sp"
        android:paddingBottom="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/home_profile"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:contentDescription="@string/home"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:tint="@color/kuning_pucat" />

    </RelativeLayout>

    <TextView
        android:id="@+id/student_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="Hello World!"
        android:textColor="@color/imperial_primer"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_header"
        app:layout_constraintVertical_bias="0.071"
        android:background="@color/kuning_pucat"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="8dp"
        android:background="@color/kuning_pucat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_full_name"
        app:layout_constraintVertical_bias="0.078">

        <TextView
            android:id="@+id/personal_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_information"
            android:textColor="@color/imperial_primer"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_information"
            android:text="Hello World!"
            android:textColor="@color/imperial_primer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:text="Hello World!"
            android:textColor="@color/imperial_primer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dob"
            android:text="Hello World!"
            android:textColor="@color/imperial_primer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:text="Hello World!"
            android:textColor="@color/imperial_primer"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="8dp"
        android:background="@color/kuning_pucat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.128">

        <TextView
            android:id="@+id/academic_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/academic_information"
            android:textColor="@color/imperial_primer"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/nisn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/academic_information"
            android:text="Hello World!"
            android:textColor="@color/imperial_primer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/class_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nisn"
            android:text="Hello World!"
            android:textColor="@color/imperial_primer"
            android:textSize="20sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>